# dronesim

./: .gitignore  CMakeLists.txt  README.md  buildandrun.sh  camera_move.cc  depth_camera.world
include/: DepthCameraPlugin.hh  DronesimShm.hh  myhead.hh
src/: CMakeLists.txt  DepthCameraPlugin.cc  DronesimShm.cc  reader.cc
src/gazebo_interface/: CMakeLists.txt  DepthCameraPlugin.cc  camera_move.cc
src/reader/: CMakeLists.txt  DronesimShm.cc  reader.cpp
